# aicli

./: .env.example  .gitignore  Cargo.toml  MCP_INTEGRATION.md  README.md  my.txt
agent/: agent.rs
mcp/: mcp.rs
rag/: Cargo.toml  README.md
rag/src/: build_prompt.rs  chunk_text.rs  config.rs  embed_chunks.rs  embed_query.rs  generate.rs  http.rs  lib.rs  retrieve_chunks.rs  scan_files.rs  store_qdrant.rs
rag/tests/: agent_parse_decision.rs
src/: main.rs
