[package]
name = "aicli"
version = "0.1.0"
edition = "2024"
description = "AI CLI with RAG and file injection capabilities"
license = "MIT"
repository = "https://github.com/gitsudhir/aicli"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30.0"
tokio = { version = "1", features = ["full"] }
rag = { version = "0.1.0", path = "rag" }
