[package]
name = "rag"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
mcp-client-rust = { path = "../../mcp-client-rust" }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
walkdir = "2.5"
